--- a/GestionConference/ConferenceApp/Templates/base.html
+++ b/GestionConference/ConferenceApp/Templates/base.html
@@ -6,6 +6,7 @@
     <nav>
         <a>Home</a>
         <a href="{% url 'liste_conferences' %}">Conférences</a>
+        <a href="/submissions/">Mes Soumissions</a>
         <a>Contact</a>
         {% if user.is_authenticated %}
          <a> {{user.username}}</a>
